that weird overflow thing fixed

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -19,7 +19,6 @@ footer {
 }
 .footerJuno:last-child {
   justify-content: flex-end;
-  overflow-x: hidden;
 }
 .footerJuno p {
   color: var(--red);
